--- a/lib/l10n/intl_ru_RU.arb
+++ b/lib/l10n/intl_ru_RU.arb
@@ -1,7 +1,15 @@
 {
-  "try again": "попробуйте снова",
+  "try_again": "попробуйте снова",
   "close": "Закрыть",
   "auth": "Авторизация",
   "login": "Логин",
-  "login mast include more then 8 sign": "Логин должен содержать не менее 8 символов"
+  "pass": "Пароль",
+  "login_len_worning": "Логин должен содержать не менее 3 символов",
+  "pass_len_worning":  "Пароль должен содержать не менее 8 символов",
+  "enter":"Вход",
+  "counter":"Счетчик",
+  "counter_value":"Значение счетчика",
+  "language":"Язык",
+  "english":"Английский",
+  "russian":"Русский"
 }
