--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,6 +1,6 @@
 {"try_again": "try again",
   "close": "close",
-  "auth": "auth",
+  "auth": "Auth",
   "login": "login",
   "pass": "password",
   "login_len_worning": "login mast have at least at 3 sign",
